<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="52dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/_nokta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
         />

    <Button
        android:id="@+id/button3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/_artiEksi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
         />

    <Button
        android:id="@+id/button4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/_esittir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
         />

    <Button
        android:id="@+id/button5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button5"
         />

    <Button
        android:id="@+id/button7"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button6"
         />

    <Button
        android:id="@+id/button8"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_parantez"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button7"
         />

    <Button
        android:id="@+id/button9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button10"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button9"
         />

    <Button
        android:id="@+id/button11"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button10"
         />

    <Button
        android:id="@+id/button12"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_arti"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button11"
         />

    <Button
        android:id="@+id/button13"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button14"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintStart_toEndOf="@+id/button13"
         />

    <Button
        android:id="@+id/button15"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button14"
        />

    <Button
        android:id="@+id/button16"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_eksi"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/button15"
        />

    <Button
        android:id="@+id/button17"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button18"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_bolu"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintStart_toEndOf="@+id/button17"
         />

    <Button
        android:id="@+id/button19"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_carpma"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button18"
         />

    <Button
        android:id="@+id/button29"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_satirSil"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button19"
         />


</androidx.constraintlayout.widget.ConstraintLayout>